--- a/css/style.css
+++ b/css/style.css
@@ -4,18 +4,6 @@
 *{
 	box-sizing: border-box;
 }
-div{
-	/* outline-style: dotted;
-	outline-color: orange;
-	margin: 2px;  */
-}
-
-/*
-div{
-    outline-style: dotted;
-    outline-color: orange;
-    margin: 2px;
-}*/
 
 /*Navigation and Modal*/
 .brand-logo{
@@ -47,7 +35,7 @@ div{
   background-size: cover;
 }
 
-/*Ingredient Input*/
+/*Ingredient Input Modal*/
 
 h3 {
   color: white;
@@ -61,6 +49,7 @@ h4 {
   margin-top: 0px;
   line-height: 1.6;
   display: inline-block;
+  /*width: 750px;*/
 }
 
 #ingredientInput p {
@@ -70,6 +59,10 @@ h4 {
 
 #find-recipe{
   font-size: 10px;
+  word-wrap: break-word;
+}
+
+#open-input-container{
   word-wrap: break-word;
 }
 
@@ -84,9 +77,9 @@ h4 {
   width: 50%;
   background-color: none;
 }
-input[type=text]:focus{
+/*input[type=text]:focus{
 	background-color: #439543;
-}
+}*/
 
 /*Tabs for Recipes, Videos, and Saved Recipes*/
 #recipeBank{
@@ -120,12 +113,7 @@ margin-bottom: 15px;
 .tabs .tab a.active {
   border-bottom: 2px solid #880e4f;
 }
-/*#loginBox{
-margin-left: 100px;
-margin-top: 100px;
-border-radius: 3px;
 
-}*/
 
 
 
@@ -145,7 +133,7 @@ border-radius: 3px;
   xmargin: -20px;
 }
 .card-content{
-	background-color: #439543;
+	background-color: #26a69a;
 }
 .ch-item {
 	width: 100%;
